--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js13kserver",
+  "name": "throw-back",
   "version": "1.0.2",
-  "description": "js13kgames game jam server",
+  "description": "Two player online mobile",
   "license": "MIT",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "keywords": [
     "js13kgames",
+    "back",
     "server"
   ],
   "engines": {
